<resources>
    <string name="app_name">Snake Fingertips</string>
    <string name="settings">Game Settings</string>
    <string name="easy">None</string>
    <string name="medium">Few</string>
    <string name="hard">Many</string>
    <string name="difficulty">Number Of Obstacles</string>
    <string name="size">Map Size</string>
    <string name="tiny">Tiny</string>
    <string name="normal">Normal</string>
    <string name="wide">Wide</string>
    <string name="pause">Paused</string>
    <string name="cancel">Cancel</string>
    <string name="pauseContent">Game has been paused.</string>
    <string name="continueGame">Continue</string>
    <string name="end">Game Over!</string>
    <string name="restart">Play Again</string>
    <string name="score">"Your score is: "</string>
    <string name="speed">Snake Speed</string>
    <string name="slow">Slow</string>
    <string name="quick">quick</string>
    <string name="sound">Music and Sound Effects</string>
    <string name="allSound">All On</string>
    <string name="only">Only Sound Effects</string>
    <string name="allOff">All Off</string>
    <string name="Info">Help</string>
    <string name="confirm">Confirm</string>
    <string name="content">Guidelines:\n1) Double tap to start/pause.\n2) Swipe the screen up, down, left, and right to control the snake to turn.\n3) Out of bounds (will not hit the left and right borders, but will hit the upper and lower borders), hit an obstacle and die or hit the snake itself, eat ordinary food will add one point and lengthen by one unit length, eat special food Three points will be added and one unit length will be subtracted.\n4) In the single-player mode, the player controls a snake to eat as much food as possible. In the man-machine battle, the player controls the snake to compete with the AI snake. The player snake and the AI snake will not collide.</string>
    <string name="highest">"Your highest score is: "</string>
    <string name="mode">Game Mode</string>
    <string name="single">Single Player</string>
    <string name="pve">PvE</string>
    <string name="you">"Your score: "</string>
    <string name="ai">"AI: "</string>
    <string name="start">双击开始游戏</string>
</resources>